# ikigai

./: .gitignore  CONTRIBUTING.md  Jenkinsfile  Makefile  README.md  pyproject.toml
.ci/: lint  test
.github/workflows/: checks.yml  python-package.yml  workflow.yaml
scripts/: tag.py
src/ikigai/: __about__.py  __init__.py  ikigai.py
src/ikigai/client/: __init__.py  api.py  client.py  datax.py  session.py
src/ikigai/components/: __init__.py  _flow_definition_shim.py  app.py  custom_facet.py  dataset.py  flow.py  flow_definition.py  model.py  project.py  specs.py
src/ikigai/specs/: __init__.py  custom_facet.py  facet.py  model.py
src/ikigai/typing/: __init__.py  api.py  component_browser.py  named_mapping.py  protocol.py
src/ikigai/typing/protocol/: __init__.py  app.py  dataset.py  directory.py  flow.py  generic.py  model.py
src/ikigai/typing/pydantic_extensions/: __init__.py  custom_serializers.py  custom_validators.py  types.py
src/ikigai/utils/: __init__.py  compatibility.py  custom_serializers.py  custom_validators.py  data_structures.py  enums.py  named_mapping.py  protocols.py  shim.py
tests/: conftest.py  test_ikigai.py
tests/components/: conftest.py  test_app.py  test_custom_facet.py  test_dataset.py  test_flow.py  test_flow_definition.py  test_model.py  test_project.py  test_specs.py
