[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikigai"
dynamic = ["version"]
description = 'Python client for ikigailabs'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [{ name = "Harsh Parekh", email = "harsh@ikigailabs.io" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "email-validator",
  "pydantic>=2.0",
  "pandas>=1.5",
  "requests",
  "tomli; python_version<'3.11'",
]

[project.urls]
Documentation = "https://github.com/ikigailabs-io/ikigai#readme"
Issues = "https://github.com/ikigailabs-io/ikigai/issues"
Source = "https://github.com/ikigailabs-io/ikigai"

# Confiuring Tooling

## Configure hatch

### Point hatch's build tool to the package version
[tool.hatch.version]
path = "src/ikigai/__about__.py"

### Setup hatch for testing package across multiple python versions
[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

### Setup venv used for development
[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "ipython", "Faker>=33.1.0"]

### Setup scripts for testing and coverage reporting
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report", "coverage html"]
cov = ["test-cov", "cov-report"]
cov-display = ["cov", "open htmlcov/index.html || xdg-open htmlcov/index.html"]

### Setup venv for linting and static analysis
[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

### Setup venv for type-checking
[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0", "pytest", "Faker>=33.1.0"]

### Setup scripts to run type checking
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ikigai tests}"

## Configure coverage
[tool.coverage.run]
source_pkgs = ["ikigai", "tests"]
branch = true
parallel = true
omit = ["src/ikigai/__about__.py"]

[tool.coverage.paths]
ikigai = ["src/ikigai", "*/ikigai/src/ikigai"]
tests = ["tests", "*/ikigai/tests"]

[tool.coverage.report]
exclude_also = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
]
